grammar.output
Grammar

    0 $accept: pipe_sequence $end

    1 pipe_sequence: simple_command
    2              | pipe_sequence PIPE simple_command

    3 simple_command: cmd_prefix cmd_word cmd_suffix
    4               | cmd_prefix cmd_word
    5               | cmd_prefix
    6               | cmd_name cmd_suffix
    7               | cmd_name

    8 cmd_name: WORD

    9 cmd_word: WORD

   10 cmd_prefix: io_redirect
   11           | cmd_prefix io_redirect

   12 cmd_suffix: io_redirect
   13           | cmd_suffix io_redirect
   14           | WORD
   15           | cmd_suffix WORD

   16 io_redirect: io_file
   17            | io_here

   18 io_file: RET_TO filename
   19        | RET_FROM filename
   20        | DGREAT filename

   21 filename: WORD

   22 io_here: DLESS here_end

   23 here_end: WORD


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    WORD (258) 8 9 14 15 21 23
    RET_TO (259) 18
    RET_FROM (260) 19
    PIPE (261) 2
    DLESS (262) 22
    DGREAT (263) 20


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    pipe_sequence (10)
        on left: 1 2
        on right: 0 2
    simple_command (11)
        on left: 3 4 5 6 7
        on right: 1 2
    cmd_name (12)
        on left: 8
        on right: 6 7
    cmd_word (13)
        on left: 9
        on right: 3 4
    cmd_prefix (14)
        on left: 10 11
        on right: 3 4 5 11
    cmd_suffix (15)
        on left: 12 13 14 15
        on right: 3 6 13 15
    io_redirect (16)
        on left: 16 17
        on right: 10 11 12 13
    io_file (17)
        on left: 18 19 20
        on right: 16
    filename (18)
        on left: 21
        on right: 18 19 20
    io_here (19)
        on left: 22
        on right: 17
    here_end (20)
        on left: 23
        on right: 22


State 0

    0 $accept: . pipe_sequence $end

    WORD      shift, and go to state 1
    RET_TO    shift, and go to state 2
    RET_FROM  shift, and go to state 3
    DLESS     shift, and go to state 4
    DGREAT    shift, and go to state 5

    pipe_sequence   go to state 6
    simple_command  go to state 7
    cmd_name        go to state 8
    cmd_prefix      go to state 9
    io_redirect     go to state 10
    io_file         go to state 11
    io_here         go to state 12


State 1

    8 cmd_name: WORD .

    $default  reduce using rule 8 (cmd_name)


State 2

   18 io_file: RET_TO . filename

    WORD  shift, and go to state 13

    filename  go to state 14


State 3

   19 io_file: RET_FROM . filename

    WORD  shift, and go to state 13

    filename  go to state 15


State 4

   22 io_here: DLESS . here_end

    WORD  shift, and go to state 16

    here_end  go to state 17


State 5

   20 io_file: DGREAT . filename

    WORD  shift, and go to state 13

    filename  go to state 18


State 6

    0 $accept: pipe_sequence . $end
    2 pipe_sequence: pipe_sequence . PIPE simple_command

    $end  shift, and go to state 19
    PIPE  shift, and go to state 20


State 7

    1 pipe_sequence: simple_command .

    $default  reduce using rule 1 (pipe_sequence)


State 8

    6 simple_command: cmd_name . cmd_suffix
    7               | cmd_name .

    WORD      shift, and go to state 21
    RET_TO    shift, and go to state 2
    RET_FROM  shift, and go to state 3
    DLESS     shift, and go to state 4
    DGREAT    shift, and go to state 5

    $default  reduce using rule 7 (simple_command)

    cmd_suffix   go to state 22
    io_redirect  go to state 23
    io_file      go to state 11
    io_here      go to state 12


State 9

    3 simple_command: cmd_prefix . cmd_word cmd_suffix
    4               | cmd_prefix . cmd_word
    5               | cmd_prefix .
   11 cmd_prefix: cmd_prefix . io_redirect

    WORD      shift, and go to state 24
    RET_TO    shift, and go to state 2
    RET_FROM  shift, and go to state 3
    DLESS     shift, and go to state 4
    DGREAT    shift, and go to state 5

    $default  reduce using rule 5 (simple_command)

    cmd_word     go to state 25
    io_redirect  go to state 26
    io_file      go to state 11
    io_here      go to state 12


State 10

   10 cmd_prefix: io_redirect .

    $default  reduce using rule 10 (cmd_prefix)


State 11

   16 io_redirect: io_file .

    $default  reduce using rule 16 (io_redirect)


State 12

   17 io_redirect: io_here .

    $default  reduce using rule 17 (io_redirect)


State 13

   21 filename: WORD .

    $default  reduce using rule 21 (filename)


State 14

   18 io_file: RET_TO filename .

    $default  reduce using rule 18 (io_file)


State 15

   19 io_file: RET_FROM filename .

    $default  reduce using rule 19 (io_file)


State 16

   23 here_end: WORD .

    $default  reduce using rule 23 (here_end)


State 17

   22 io_here: DLESS here_end .

    $default  reduce using rule 22 (io_here)


State 18

   20 io_file: DGREAT filename .

    $default  reduce using rule 20 (io_file)


State 19

    0 $accept: pipe_sequence $end .

    $default  accept


State 20

    2 pipe_sequence: pipe_sequence PIPE . simple_command

    WORD      shift, and go to state 1
    RET_TO    shift, and go to state 2
    RET_FROM  shift, and go to state 3
    DLESS     shift, and go to state 4
    DGREAT    shift, and go to state 5

    simple_command  go to state 27
    cmd_name        go to state 8
    cmd_prefix      go to state 9
    io_redirect     go to state 10
    io_file         go to state 11
    io_here         go to state 12


State 21

   14 cmd_suffix: WORD .

    $default  reduce using rule 14 (cmd_suffix)


State 22

    6 simple_command: cmd_name cmd_suffix .
   13 cmd_suffix: cmd_suffix . io_redirect
   15           | cmd_suffix . WORD

    WORD      shift, and go to state 28
    RET_TO    shift, and go to state 2
    RET_FROM  shift, and go to state 3
    DLESS     shift, and go to state 4
    DGREAT    shift, and go to state 5

    $default  reduce using rule 6 (simple_command)

    io_redirect  go to state 29
    io_file      go to state 11
    io_here      go to state 12


State 23

   12 cmd_suffix: io_redirect .

    $default  reduce using rule 12 (cmd_suffix)


State 24

    9 cmd_word: WORD .

    $default  reduce using rule 9 (cmd_word)


State 25

    3 simple_command: cmd_prefix cmd_word . cmd_suffix
    4               | cmd_prefix cmd_word .

    WORD      shift, and go to state 21
    RET_TO    shift, and go to state 2
    RET_FROM  shift, and go to state 3
    DLESS     shift, and go to state 4
    DGREAT    shift, and go to state 5

    $default  reduce using rule 4 (simple_command)

    cmd_suffix   go to state 30
    io_redirect  go to state 23
    io_file      go to state 11
    io_here      go to state 12


State 26

   11 cmd_prefix: cmd_prefix io_redirect .

    $default  reduce using rule 11 (cmd_prefix)


State 27

    2 pipe_sequence: pipe_sequence PIPE simple_command .

    $default  reduce using rule 2 (pipe_sequence)


State 28

   15 cmd_suffix: cmd_suffix WORD .

    $default  reduce using rule 15 (cmd_suffix)


State 29

   13 cmd_suffix: cmd_suffix io_redirect .

    $default  reduce using rule 13 (cmd_suffix)


State 30

    3 simple_command: cmd_prefix cmd_word cmd_suffix .
   13 cmd_suffix: cmd_suffix . io_redirect
   15           | cmd_suffix . WORD

    WORD      shift, and go to state 28
    RET_TO    shift, and go to state 2
    RET_FROM  shift, and go to state 3
    DLESS     shift, and go to state 4
    DGREAT    shift, and go to state 5

    $default  reduce using rule 3 (simple_command)

    io_redirect  go to state 29
    io_file      go to state 11
    io_here      go to state 12
